Bug 328006 - KDevelop crash with kdev-python
Summary: KDevelop crash with kdev-python
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-11-24 11:51 UTC by Antonis Kanouras
Modified: 2016-04-23 18:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis Kanouras 2013-11-24 11:51:47 UTC
Application: kdevelop (4.5.1)
KDE Platform Version: 4.11.2
Qt Version: 4.8.4
Operating System: Linux 3.11.0-14-generic x86_64
Distribution: Ubuntu 13.10

-- Information about the crash:
- What I was doing when the application crashed:

I had a Django project loaded with mostly Python source files open.

I think the steps that lead to this were:

1. I typed "o" in a Python file
2. The completions window popped up and froze (This happens often, lasting 5-15 seconds usually)
3. I immediately pressed Backspace
4. Kdevelop crashed

This is the first time that this sequence of steps led to a crash.

Please contact me if there's anything more I can do to help debug this.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f1d2df557c0 (LWP 31288))]

Thread 12 (Thread 0x7f1d0e6cc700 (LWP 31289)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007f1d2bca43e4 in wait (time=1000, this=0xd35ad0) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=this@entry=0x209c088, mutex=mutex@entry=0x209c090, time=time@entry=1000) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f1d27b53c1b in KDevelop::DUChainPrivate::CleanupThread::run (this=0x209c070) at ../../language/duchain/duchain.cpp:282
#4  0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x209c070) at thread/qthread_unix.cpp:338
#5  0x00007f1d29a87f6e in start_thread (arg=0x7f1d0e6cc700) at pthread_create.c:311
#6  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 11 (Thread 0x7f1cfa59a700 (LWP 31304)):
#0  0x00007fff02995a2f in clock_gettime ()
#1  0x00007f1d2a9ba96d in clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00007f1d2bcf8757 in do_gettime (frac=0x7f1cfa599b40, sec=0x7f1cfa599b38) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f1d2bdd1fe5 in updateCurrentTime (this=0x7f1cf4002860) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f1cf4002860, tm=...) at kernel/qeventdispatcher_unix.cpp:461
#6  0x00007f1d2bdd082c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f1cfa599bf4) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f1d2bdd08d5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1cfa599bf4) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f1d24d36d4d in g_main_context_prepare (context=context@entry=0x7f1cf40009c0, priority=priority@entry=0x7f1cfa599c78) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3339
#9  0x00007f1d24d375c3 in g_main_context_iterate (context=context@entry=0x7f1cf40009c0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3692
#10 0x00007f1d24d377ac in g_main_context_iteration (context=0x7f1cf40009c0, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#11 0x00007f1d2bdd0a76 in QEventDispatcherGlib::processEvents (this=0x7f1cf40008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7f1cfa599db0, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7f1cfa599db0, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f1d2bca188f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#15 0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x2f0cc70) at thread/qthread_unix.cpp:338
#16 0x00007f1d29a87f6e in start_thread (arg=0x7f1cfa59a700) at pthread_create.c:311
#17 0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 10 (Thread 0x7f1cf9d99700 (LWP 31305)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1d26ec606b in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7f1d271c3f00 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007f1d26ec60a9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007f1d29a87f6e in start_thread (arg=0x7f1cf9d99700) at pthread_create.c:311
#4  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 9 (Thread 0x7f1cf293b700 (LWP 31319)):
#0  0x00007fff02995a2f in clock_gettime ()
#1  0x00007f1d2a9ba96d in clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00007f1d2bcf8757 in do_gettime (frac=0x7f1cf293ab00, sec=0x7f1cf293aaf8) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f1d2bdd1fe5 in updateCurrentTime (this=0x7f1c68002660) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f1c68002660, tm=...) at kernel/qeventdispatcher_unix.cpp:461
#6  0x00007f1d2bdd082c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f1cf293abb4) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f1d2bdd08d5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1cf293abb4) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f1d24d36d4d in g_main_context_prepare (context=context@entry=0x7f1c680009a0, priority=priority@entry=0x7f1cf293ac38) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3339
#9  0x00007f1d24d375c3 in g_main_context_iterate (context=context@entry=0x7f1c680009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3692
#10 0x00007f1d24d377ac in g_main_context_iteration (context=0x7f1c680009a0, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#11 0x00007f1d2bdd0a76 in QEventDispatcherGlib::processEvents (this=0x7f1c680008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7f1cf293ad70, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7f1cf293ad70, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f1d2bca188f in QThread::exec (this=this@entry=0x41494f0) at thread/qthread.cpp:542
#15 0x00007f1d2bd83d13 in QInotifyFileSystemWatcherEngine::run (this=0x41494f0) at io/qfilesystemwatcher_inotify.cpp:265
#16 0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x41494f0) at thread/qthread_unix.cpp:338
#17 0x00007f1d29a87f6e in start_thread (arg=0x7f1cf293b700) at pthread_create.c:311
#18 0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 8 (Thread 0x7f1c677fe700 (LWP 31344)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1d2189e1cd in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f1d2189e209 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f1d29a87f6e in start_thread (arg=0x7f1c677fe700) at pthread_create.c:311
#4  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 7 (Thread 0x7f1c67fff700 (LWP 31345)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1d215debbd in JSC::BlockAllocator::blockFreeingThreadMain() () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f1d218cda76 in WTF::wtfThreadEntryPoint(void*) () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f1d29a87f6e in start_thread (arg=0x7f1c67fff700) at pthread_create.c:311
#4  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 6 (Thread 0x7f1c66bfd700 (LWP 31346)):
#0  0x00007f1d2a998f7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f1d24d376a4 in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7f1c58018400, timeout=5572, context=0x7f1c58002980) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:4006
#2  g_main_context_iterate (context=context@entry=0x7f1c58002980, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3707
#3  0x00007f1d24d377ac in g_main_context_iteration (context=0x7f1c58002980, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#4  0x00007f1d2bdd0a76 in QEventDispatcherGlib::processEvents (this=0x7f1c5801eb60, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7f1c66bfcdb0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7f1c66bfcdb0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f1d2bca188f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#8  0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x4095190) at thread/qthread_unix.cpp:338
#9  0x00007f1d29a87f6e in start_thread (arg=0x7f1c66bfd700) at pthread_create.c:311
#10 0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 5 (Thread 0x7f1c65fbf700 (LWP 31614)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1d2bca4406 in wait (time=18446744073709551615, this=0x1065090) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x1065c58, mutex=0x1065750, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f1d225f8e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1065c30, th=0x72482f0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f1d225fb903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x10657b0, th=0x72482f0, previous=0x0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f1d225fb91c in ThreadWeaver::WorkingHardState::applyForWork (this=0x10657b0, th=0x72482f0, previous=0x450e8a0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#6  0x00007f1d225fa61f in ThreadWeaver::Thread::run (this=0x72482f0) at ../../../threadweaver/Weaver/Thread.cpp:98
#7  0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x72482f0) at thread/qthread_unix.cpp:338
#8  0x00007f1d29a87f6e in start_thread (arg=0x7f1c65fbf700) at pthread_create.c:311
#9  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7f1c657be700 (LWP 31615)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f1d2bca4406 in wait (time=18446744073709551615, this=0x1065090) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x1065c58, mutex=0x1065750, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f1d225f8e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1065c30, th=0x7356ef0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f1d225fb903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x10657b0, th=0x7356ef0, previous=0x11ef2a50) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f1d225fa61f in ThreadWeaver::Thread::run (this=0x7356ef0) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x7356ef0) at thread/qthread_unix.cpp:338
#7  0x00007f1d29a87f6e in start_thread (arg=0x7f1c657be700) at pthread_create.c:311
#8  0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f1c17a80700 (LWP 31654)):
#0  0x00007fff02995a2f in clock_gettime ()
#1  0x00007f1d2a9ba96d in clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00007f1d2bcf8757 in do_gettime (frac=0x7f1c17a7fb40, sec=0x7f1c17a7fb38) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f1d2bdd1fe5 in updateCurrentTime (this=0x7f1c08001330) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f1c08001330, tm=...) at kernel/qeventdispatcher_unix.cpp:461
#6  0x00007f1d2bdd082c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f1c17a7fbf4) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f1d2bdd08d5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1c17a7fbf4) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f1d24d36d4d in g_main_context_prepare (context=context@entry=0x7f1c080009a0, priority=priority@entry=0x7f1c17a7fc78) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3339
#9  0x00007f1d24d375c3 in g_main_context_iterate (context=context@entry=0x7f1c080009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3692
#10 0x00007f1d24d377ac in g_main_context_iteration (context=0x7f1c080009a0, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#11 0x00007f1d2bdd0a76 in QEventDispatcherGlib::processEvents (this=0x7f1c080008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7f1c17a7fdb0, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7f1c17a7fdb0, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f1d2bca188f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#15 0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x7357890) at thread/qthread_unix.cpp:338
#16 0x00007f1d29a87f6e in start_thread (arg=0x7f1c17a80700) at pthread_create.c:311
#17 0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f1c1727f700 (LWP 31655)):
#0  0x00007fff02995a2f in clock_gettime ()
#1  0x00007f1d2a9ba96d in clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:115
#2  0x00007f1d2bcf8757 in do_gettime (frac=0x7f1c1727eb40, sec=0x7f1c1727eb38) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f1d2bdd1fe5 in updateCurrentTime (this=0x7f1c0c002860) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=0x7f1c0c002860, tm=...) at kernel/qeventdispatcher_unix.cpp:461
#6  0x00007f1d2bdd082c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f1c1727ebf4) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f1d2bdd08d5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1c1727ebf4) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f1d24d36d4d in g_main_context_prepare (context=context@entry=0x7f1c0c0009a0, priority=priority@entry=0x7f1c1727ec78) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3339
#9  0x00007f1d24d375c3 in g_main_context_iterate (context=context@entry=0x7f1c0c0009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3692
#10 0x00007f1d24d377ac in g_main_context_iteration (context=0x7f1c0c0009a0, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#11 0x00007f1d2bdd0a76 in QEventDispatcherGlib::processEvents (this=0x7f1c0c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7f1c1727edb0, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7f1c1727edb0, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f1d2bca188f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#15 0x00007f1d2bca3f2f in QThreadPrivate::start (arg=0x472f8f0) at thread/qthread_unix.cpp:338
#16 0x00007f1d29a87f6e in start_thread (arg=0x7f1c1727f700) at pthread_create.c:311
#17 0x00007f1d2a9a59cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f1d2df557c0 (LWP 31288)):
[KCrash Handler]
#6  KDevelop::FunctionType::arguments (this=this@entry=0x0) at ../../language/duchain/types/functiontype.cpp:112
#7  0x00007f1cfa830edc in Python::FunctionDeclarationCompletionItem::executed (this=<optimized out>, document=0x3ab3850, word=...) at /build/buildd/kdev-python-1.5.1/codecompletion/items/functiondeclaration.cpp:158
#8  0x00007f1d27c3a20d in KDevelop::NormalDeclarationCompletionItem::execute (this=0x7f1cf404d9d0, document=0x3ab3850, word=...) at ../../language/codecompletion/normaldeclarationcompletionitem.cpp:97
#9  0x00007f1d03891fcc in KateCompletionWidget::execute (this=0x3d71640) at ../../part/completion/katecompletionwidget.cpp:835
#10 0x00007f1d0395ab25 in KateViewInternal::keyPressEvent (this=0x3c0b2b0, e=0x7fff0294a2f0) at ../../part/view/kateviewinternal.cpp:2279
#11 0x00007f1d039599c7 in KateViewInternal::eventFilter (this=0x3c0b2b0, obj=0x3c0b2b0, e=0x7fff0294a2f0) at ../../part/view/kateviewinternal.cpp:2186
#12 0x00007f1d2bda3a26 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0xbe56c0, receiver=receiver@entry=0x3c0b2b0, event=event@entry=0x7fff0294a2f0) at kernel/qcoreapplication.cpp:1056
#13 0x00007f1d2b140ddc in QApplicationPrivate::notify_helper (this=this@entry=0xbe56c0, receiver=receiver@entry=0x3c0b2b0, e=e@entry=0x7fff0294a2f0) at kernel/qapplication.cpp:4563
#14 0x00007f1d2b1486c1 in QApplication::notify (this=this@entry=0x7fff0294adf0, receiver=receiver@entry=0x3c0b2b0, e=e@entry=0x7fff0294a2f0) at kernel/qapplication.cpp:4008
#15 0x00007f1d2c32ba6a in KApplication::notify (this=0x7fff0294adf0, receiver=0x3c0b2b0, event=0x7fff0294a2f0) at ../../kdeui/kernel/kapplication.cpp:311
#16 0x00007f1d2bda38bd in QCoreApplication::notifyInternal (this=0x7fff0294adf0, receiver=receiver@entry=0x3c0b2b0, event=event@entry=0x7fff0294a2f0) at kernel/qcoreapplication.cpp:946
#17 0x00007f1d2b13f526 in sendSpontaneousEvent (event=event@entry=0x7fff0294a2f0, receiver=receiver@entry=0x3c0b2b0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#18 qt_sendSpontaneousEvent (receiver=receiver@entry=0x3c0b2b0, event=event@entry=0x7fff0294a2f0) at kernel/qapplication.cpp:5565
#19 0x00007f1d2b1dfe19 in QKeyMapper::sendKeyEvent (keyWidget=keyWidget@entry=0x3c0b2b0, grab=grab@entry=false, type=QEvent::KeyPress, code=16777220, modifiers=..., text=..., autorepeat=autorepeat@entry=false, count=1, nativeScanCode=36, nativeVirtualKey=65293, nativeModifiers=0) at kernel/qkeymapper_x11.cpp:1866
#20 0x00007f1d2b1e01b9 in QKeyMapperPrivate::translateKeyEvent (this=0xc410d0, keyWidget=keyWidget@entry=0x3c0b2b0, event=event@entry=0x7fff0294a880, grab=grab@entry=false) at kernel/qkeymapper_x11.cpp:1836
#21 0x00007f1d2b1ba207 in QApplication::x11ProcessEvent (this=0x7fff0294adf0, event=event@entry=0x7fff0294a880) at kernel/qapplication_x11.cpp:3639
#22 0x00007f1d2b1e2922 in x11EventSourceDispatch (s=s@entry=0xbe6f20, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#23 0x00007f1d24d373b6 in g_main_dispatch (context=0xbe5ba0) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3065
#24 g_main_context_dispatch (context=context@entry=0xbe5ba0) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3641
#25 0x00007f1d24d37708 in g_main_context_iterate (context=context@entry=0xbe5ba0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3712
#26 0x00007f1d24d377ac in g_main_context_iteration (context=0xbe5ba0, may_block=1) at /build/buildd/glib2.0-2.38.1/./glib/gmain.c:3773
#27 0x00007f1d2bdd0a55 in QEventDispatcherGlib::processEvents (this=0xb1a170, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00007f1d2b1e29d6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f1d2bda25ef in QEventLoop::processEvents (this=this@entry=0x7fff0294ac60, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f1d2bda28e5 in QEventLoop::exec (this=this@entry=0x7fff0294ac60, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007f1d2bda7e5b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#32 0x00007f1d2b13f34c in QApplication::exec () at kernel/qapplication.cpp:3828
#33 0x000000000040e6f9 in main (argc=<optimized out>, argv=<optimized out>) at ../../app/main.cpp:522

Reported using DrKonqi
Comment 1 Milian Wolff 2014-07-11 13:31:00 UTC
Git commit 89ffc9ba0e58744e5a051501a195c93f594cfe75 by Milian Wolff.
Committed on 11/07/2014 at 13:30.
Pushed by mwolff into branch '1.7'.

Check type before accessing it to prevent crash.

M  +1    -1    codecompletion/items/functiondeclaration.cpp

http://commits.kde.org/kdev-python/89ffc9ba0e58744e5a051501a195c93f594cfe75
Comment 2 Kevin Funk 2016-04-23 18:15:28 UTC
*** Bug 362095 has been marked as a duplicate of this bug. ***
Comment 3 Sven Brauch 2016-04-23 18:28:41 UTC
Git commit fde6913d99f9b4310c8fcc3f7d78842477f1df2e by Sven Brauch.
Committed on 23/04/2016 at 18:28.
Pushed by brauch into branch '1.7-py3'.

Cherry-pick: Check type before accessing it to prevent crash.

Cherry-pick to 1.7-py3 branch.
Related: bug 362095

# Conflicts:
#	codecompletion/items/functiondeclaration.cpp

M  +1    -1    codecompletion/items/functiondeclaration.cpp

http://commits.kde.org/kdev-python/fde6913d99f9b4310c8fcc3f7d78842477f1df2e