Cherry-pick: Check type before accessing it to prevent crash.

Cherry-pick to 1.7-py3 branch.

BUG: 328006
BUG: 362095

# Conflicts:
#	codecompletion/items/functiondeclaration.cpp